--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <header>
         <!-- Nav Area -->
-        <nav>
-            <h2>Ma<span class="orange-text">r</span>i</h2>
+        <nav class="navigation">
+            <h2 class="navigation-title">Ma<span class="orange-text">r</span>i</h2>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#">Portfolio</a></li>
                 <li class="nav-item"><a href="#">Blog</a></li>
+                <li class="nav-item"><a href="#"><button class="primary-btn">Hire Me</button></a></li>
             </ul>
-            <button>Hire Me</button>
         </nav>
     </header>
     <main></main>
