--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <!-- Nav Area -->
         <nav class="navigation">
             <h2 class="navigation-title">Ma<span class="orange-text">r</span>i</h2>
@@ -22,9 +22,26 @@
                 <li class="nav-item"><a href="#"><button class="primary-btn">Hire Me</button></a></li>
             </ul>
         </nav>
+        <!-- Banner Section -->
+        <section>
+            <div class="banner">
+                <div class="banner-content">
+                    <h3 class="banner-greeting">Hi, I am</h3>
+                    <h1 class="banner-titile">Mary Hardy</h1>
+                    <p class="banner-content">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
+                        society behaved moments.</p>
+                    <div class="button-box">
+                        <button class="primary-btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="secondary-btn"><i class="fa-solid fa-phone"></i> Contact Me</button>
+                    </div>
+                </div>
+                <div class="banner-image"><img src="/images/hardy.png" alt="Photo of Mary Hardy"></div>
+            </div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
+    <script src="https://kit.fontawesome.com/fcd8b0e85b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
