--- a/index.html
+++ b/index.html
@@ -28,18 +28,48 @@
                 <div class="banner-content">
                     <h3 class="banner-greeting">Hi, I am</h3>
                     <h1 class="banner-titile">Mary Hardy</h1>
-                    <p class="banner-content">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
+                    <p class="banner-content">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                        Morning because as to
                         society behaved moments.</p>
                     <div class="button-box">
                         <button class="primary-btn"><i class="fa-solid fa-download"></i> Download CV</button>
-                    <button class="secondary-btn"><i class="fa-solid fa-phone"></i> Contact Me</button>
+                        <button class="secondary-btn"><i class="fa-solid fa-phone"></i> Contact Me</button>
                     </div>
                 </div>
                 <div class="banner-image"><img src="/images/hardy.png" alt="Photo of Mary Hardy"></div>
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <!-- About Me -->
+        <section>
+            <div class="about-me">
+                <h2 class="section-title">About Me</h2>
+                <p class="section-info">I, m a designer & developer with a passion for web design. I enjoy developing
+                    simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                    procured exceptional resulfs while working with me. Delivering work within time and budget which
+                    meets clients requirements in our mata.</p>
+                <div class="about-me-info">
+                    <div class="info-section">
+                        <p class="info-label">Name:</p>
+                        <p class="info">Mary Hardy</p>
+                    </div>
+                    <div class="info-section">
+                        <p class="info-label">Email:</p>
+                        <p class="info">info@gmail.com</p>
+                    </div>
+                    <div class="info-section">
+                        <p class="info-label">Date of Birth:</p>
+                        <p class="info">11 September, 1990</p>
+                    </div>
+                    <div class="info-section">
+                        <p class="info-label">Form:</p>
+                        <p class="info">East Jurain, Dhaka</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/fcd8b0e85b.js" crossorigin="anonymous"></script>
 </body>
