--- a/index.html
+++ b/index.html
@@ -69,6 +69,42 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="what-i-do">
+                <h2 class="section-title">What I Do</h2>
+                <p class="section-content">I have more than 10 years experience building software for clients all over
+                    the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                    find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="service-list">
+                    <div class="services">
+                        <img src="/images/icons/js.png" alt="Logo Of JavaScript" class="service-image">
+                        <h3 class="service-title">Vanilla JavaScript</h3>
+                        <p class="service-description">
+                            List skill/technologies here. You can change the icon above to
+                            any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="services">
+                        <img src="/images/icons/react.png" alt="" class="service-image">
+                        <h3 class="service-title">React</h3>
+                        <p class="service-description">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="services">
+                        <img src="/images/icons/nodejs.png" alt="" class="service-image">
+                        <h3 class="service-title">NodeJS</h3>
+                        <p class="service-description">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="services">
+                        <img src="/images/icons/mongo.png" alt="" class="service-image">
+                        <h3 class="service-title">MongoDB</h3>
+                        <p class="service-description">List skill/technologies here. You can change the icon above to
+                        any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
     <script src="https://kit.fontawesome.com/fcd8b0e85b.js" crossorigin="anonymous"></script>
